--- a/GrandCrus/grandcrus.css
+++ b/GrandCrus/grandcrus.css
@@ -4,17 +4,12 @@
   box-sizing: border-box;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  background-color: #f2f2f2f2;
-}
 
 /* Header*/
 .head {
   width: 100%;
   height: 20vh;
-  background: url(img/bg.jpg) no-repeat center center/cover;
+  background: url(../img/bg.jpg) no-repeat center center/cover;
 }
 
 .head-title {
@@ -86,7 +81,7 @@ body {
 .footer {
   width: 100%;
   height: max-content;
-  background: url(img/bg.jpg) no-repeat center center/cover;
+  background: url(../img/bg.jpg) no-repeat center center/cover;
   /*background-size: 100%;*/
 }
 
