--- a/The/the.css
+++ b/The/the.css
@@ -50,36 +50,25 @@ body {
 }
 
 /*Section equipe*/
-.equipe > h1 {
-  margin: 15px 15px;
-}
-.equipe h3 {
-  color: green;
-  margin: 15px 15px;
-}
-
-.img1 {
-  float: left;
-  margin: 10px 15px;
-  width: 50%;
-}
-
-.img2 {
-  float: right;
-  margin: 10px 15px;
-  width: 50%;
-}
-
-.concept {
-  margin-top: 15px;
-}
-
-.flex-concept {
+.element-flex {
   display: flex;
-  justify-content: space-around;
-  align-items: center;
-  background-color: antiquewhite;
+  justify-content: space-between;
+  text-align: center;
+  background-color: white;
+  margin: 15px;
+}
+
+.container-element {
+  padding: 15px 15px;
+}
+
+.element-flex div {
+  padding: 15px 15px;
   margin: 15px 15px;
+}
+
+.element-flex {
+  padding: 15px 15px;
 }
 
 /*Footer*/
