--- a/Accessoir/accessoir.css
+++ b/Accessoir/accessoir.css
@@ -186,6 +186,8 @@ body {
 
 .footer-top div {
   text-align: center;
+  margin: 15px 25px;
+  color: white;
 }
 
 .footer-top div i {
@@ -197,6 +199,8 @@ body {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  text-align: center;
+  color: white;
 }
 
 .footer-bottom {
@@ -207,4 +211,5 @@ body {
 
 .footer-bottom p {
   text-align: center;
+  color: white;
 }
