--- a/GrandCrus/grandcrus.css
+++ b/GrandCrus/grandcrus.css
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+body{
+  background-color: #f2f2f2f2;
+}
+
 /* Header*/
 .head {
   width: 100%;
@@ -62,7 +66,8 @@
 
 /*Section */
 .container-color {
-  background-color: aliceblue;
+  background-color: white;
+  margin-bottom: 25px
 }
 
 .flex-head {
@@ -97,6 +102,8 @@
 
 .footer-top div {
   text-align: center;
+  margin: 15px 25px;
+  color: white;
 }
 
 .footer-top div i {
@@ -108,6 +115,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
+  text-align: center;
+  color: white;
 }
 
 .footer-bottom {
@@ -118,4 +127,5 @@
 
 .footer-bottom p {
   text-align: center;
+  color: white;
 }
