--- a/GrandCrus/grandcrus-mobile.css
+++ b/GrandCrus/grandcrus-mobile.css
@@ -4,7 +4,7 @@
   box-sizing: border-box;
 }
 
-body {
+body{
   background-color: #f2f2f2f2;
 }
 
@@ -12,13 +12,13 @@ body {
 .head {
   width: 100%;
   height: 20vh;
-  background: url(./img/bg.jpg) no-repeat center center/cover;
+  background: url(../img/bg.jpg) no-repeat center center/cover;
 }
 
 .head-top {
-  background-color: #879e0f;
+  background-color:  #879e0f;;
   text-align: center;
-  color: white;
+  color: white
 }
 
 .flex-right {
@@ -51,6 +51,7 @@ body {
   text-decoration: none;
   color: white;
   text-transform: uppercase;
+  
 }
 
 /* Main*/
@@ -63,77 +64,38 @@ body {
   height: max-content;
 }
 
+/*Section */
 .container-color {
   background-color: white;
-  margin-bottom: 15px;
+  margin-bottom: 25px
 }
 
-/*Section equipe*/
-.equipe > h1 {
-  margin: 15px 15px;
-}
-.equipe h3 {
-  color: #879e0f;
-  margin: 15px 15px;
-}
-
-.equipe > p {
-  text-align: justify;
-  padding: 15px;
-}
-
-.img1 {
-  float: left;
-  margin: 10px 15px;
-  width: 50%;
-}
-
-.img2 {
-  float: right;
-  margin: 10px 15px;
-  width: 50%;
-}
-
-/* Concept */
-
-.concept > p {
-  text-align: justify;
-  padding: 15px;
-}
-
-.concept h1 {
-  padding: 15px;
-}
-
-.concept {
-  margin-top: 15px;
-}
-
-.flex-concept {
+.flex-head {
   display: flex;
   justify-content: space-between;
-  align-items: center;
-  text-align: center;
-  background-color: antiquewhite;
-  margin: 15px 15px;
 }
 
-.flex-concept div {
-  padding: 10px 10px;
+.flex-body {
+  display: flex;
+  justify-content: space-between;
+}
+
+/*Detail*/
+.detail >p{
+  text-align: justify;
 }
 
 /*Footer*/
 .footer {
   width: 100%;
   height: max-content;
-  background: url(./img/bg.jpg) no-repeat center center/cover;
+  background: url(../img/bg.jpg) no-repeat center center/cover;
   /*background-size: 100%;*/
 }
 
 .footer-top {
   display: flex;
   justify-content: space-between;
-  align-items: center;
   height: max-content;
   background-color: rgba(82, 80, 80, 0.158);
 }
@@ -166,53 +128,4 @@ body {
 .footer-bottom p {
   text-align: center;
   color: white;
-}
-
-/* Responsive */
-
-@media screen and (max-width: 992px) {
-  
-  .container {
-    width: 100%;
-  }
-
-  /* Concept */
-  .flex-concept {
-    flex-direction: column;
-  }
-}
-
-@media screen and (max-width: 680px) {
-  /* Header */
-  .head {
-    height: max-content;
-  }
-
-  .head-title {
-    flex-direction: column;
-  }
-
-  .nav-links {
-    flex-direction: column;
-  }
-
-  /* Concept */
-  .flex-concept {
-    flex-direction: column;
-  }
-
-  /* Footer */
-  .footer {
-    width: 100%;
-    height: max-content;
-    background: url(./img/bg.jpg) no-repeat center center/cover;
-  }
-
-  .footer-top {
-    flex-direction: column;
-  }
-
-  .footer-middle {
-    flex-direction: column;
-  }
 }
