--- a/The/the-mobile.css
+++ b/The/the-mobile.css
@@ -5,6 +5,8 @@
 }
 
 body {
+  margin: 0;
+  padding: 0;
   background-color: #f2f2f2f2;
 }
 
@@ -12,7 +14,7 @@ body {
 .head {
   width: 100%;
   height: 20vh;
-  background: url(./img/bg.jpg) no-repeat center center/cover;
+  background: url(../img/bg.jpg) no-repeat center center/cover;
 }
 
 .head-top {
@@ -63,77 +65,58 @@ body {
   height: max-content;
 }
 
-.container-color {
-  background-color: white;
-  margin-bottom: 15px;
-}
-
 /*Section equipe*/
-.equipe > h1 {
-  margin: 15px 15px;
-}
-.equipe h3 {
-  color: #879e0f;
-  margin: 15px 15px;
-}
-
-.equipe > p {
-  text-align: justify;
-  padding: 15px;
-}
-
-.img1 {
-  float: left;
-  margin: 10px 15px;
-  width: 50%;
-}
-
-.img2 {
-  float: right;
-  margin: 10px 15px;
-  width: 50%;
-}
-
-/* Concept */
-
-.concept > p {
-  text-align: justify;
-  padding: 15px;
-}
-
-.concept h1 {
-  padding: 15px;
-}
-
-.concept {
-  margin-top: 15px;
-}
-
-.flex-concept {
+.element-flex {
   display: flex;
   justify-content: space-between;
-  align-items: center;
   text-align: center;
-  background-color: antiquewhite;
+
+  margin: 15px;
+}
+
+.container-element {
+  padding: 15px 15px;
+  
+}
+
+.element-flex div {
+  padding: 15px 15px;
   margin: 15px 15px;
 }
 
-.flex-concept div {
-  padding: 10px 10px;
+.element-flex {
+  padding: 15px 15px;
+}
+
+.img-el-top {
+  background-color: white;
+  padding: 15px;
+  margin: 15px;
+}
+
+.img-el-left {
+  float: left;
+  width: 10%;
+}
+
+.btn-color {
+  background-color: #b09067;
+  border: none;
+  padding: 15px 15px;
+  color: white;
 }
 
 /*Footer*/
 .footer {
   width: 100%;
   height: max-content;
-  background: url(./img/bg.jpg) no-repeat center center/cover;
+  background: url(../img/bg.jpg) no-repeat center center/cover;
   /*background-size: 100%;*/
 }
 
 .footer-top {
   display: flex;
   justify-content: space-between;
-  align-items: center;
   height: max-content;
   background-color: rgba(82, 80, 80, 0.158);
 }
@@ -155,6 +138,11 @@ body {
   align-items: center;
   text-align: center;
   color: white;
+
+}
+
+.footer-middle div{
+  margin: 15px;
 }
 
 .footer-bottom {
@@ -166,53 +154,4 @@ body {
 .footer-bottom p {
   text-align: center;
   color: white;
-}
-
-/* Responsive */
-
-@media screen and (max-width: 992px) {
-  
-  .container {
-    width: 100%;
-  }
-
-  /* Concept */
-  .flex-concept {
-    flex-direction: column;
-  }
-}
-
-@media screen and (max-width: 680px) {
-  /* Header */
-  .head {
-    height: max-content;
-  }
-
-  .head-title {
-    flex-direction: column;
-  }
-
-  .nav-links {
-    flex-direction: column;
-  }
-
-  /* Concept */
-  .flex-concept {
-    flex-direction: column;
-  }
-
-  /* Footer */
-  .footer {
-    width: 100%;
-    height: max-content;
-    background: url(./img/bg.jpg) no-repeat center center/cover;
-  }
-
-  .footer-top {
-    flex-direction: column;
-  }
-
-  .footer-middle {
-    flex-direction: column;
-  }
 }
