--- a/Accessoir/accessoir.css
+++ b/Accessoir/accessoir.css
@@ -18,7 +18,7 @@ body {
 }
 
 .head-top {
-  background-color:  #879e0f;;
+  background-color: #879e0f;
   text-align: center;
   color: white;
 }
@@ -156,18 +156,16 @@ body {
   padding-top: 15px;
 }
 
-.detail-the-flex div >h1{
+.detail-the-flex div > h1 {
   color: #96b011;
 }
 
-.btn-color{
-  background-color: #B09067;
-  border:none;
+.btn-color {
+  background-color: #b09067;
+  border: none;
   padding: 15px 15px;
   color: white;
 }
-
-
 
 /*Footer*/
 .footer {
@@ -217,6 +215,23 @@ body {
 /* Responsive */
 
 @media screen and (max-width: 992px) {
+  .container {
+    width: 100%;
+  }
+
+  .chose-the-flex {
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .detail-the-flex {
+    flex-direction: column;
+  }
+
+  .detail-the-flex img {
+    width: 39%;
+  }
 }
 
 @media screen and (max-width: 680px) {
@@ -224,50 +239,36 @@ body {
   .head {
     width: 100%;
     height: max-content;
-    background: url(./img/bg.jpg) no-repeat center center/cover;
+    background: url(../img/bg.jpg) no-repeat center center/cover;
   }
 
   .head-title {
-    display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-    margin-top: 10px;
+    width: 100%;
+  }
+
+  .flex-right {
+    display: none;
   }
 
   .nav-links {
-    display: flex;
-    justify-content: space-between;
     flex-direction: column;
-    margin-top: 25px;
+    justify-content: center;
+    align-items: center;
   }
-
- 
 
   /* Footer */
   .footer {
     width: 100%;
     height: max-content;
-    background: url(./img/bg.jpg) no-repeat center center/cover;
+    background: url(../img/bg.jpg) no-repeat center center/cover;
   }
 
   .footer-top {
-    display: flex;
-    justify-content: space-between;
     flex-direction: column;
-    align-items: center;
-    height: max-content;
-    background-color: rgba(82, 80, 80, 0.158);
   }
 
   .footer-middle {
-    display: flex;
-    justify-content: space-between;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
-    color: white;
   }
 }
-
