--- a/The/the.css
+++ b/The/the.css
@@ -70,7 +70,6 @@ body {
   display: flex;
   justify-content: space-between;
   text-align: center;
-
   margin: 15px;
 }
 
@@ -158,8 +157,12 @@ body {
 
 @media screen and (max-width: 992px) {
 
-  
-
+  .container {
+    width: 100%;
+  }
+  .element-flex {
+    flex-direction: column;
+  }
 }
 
 @media screen and (max-width: 680px) {
@@ -167,50 +170,35 @@ body {
   .head {
     width: 100%;
     height: max-content;
-    background: url(./img/bg.jpg) no-repeat center center/cover;
+    background: url(../img/bg.jpg) no-repeat center center/cover;
   }
 
   .head-title {
-    display: flex;
     flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
-    text-align: center;
-    margin-top: 10px;
   }
 
   .nav-links {
-    display: flex;
-    justify-content: space-between;
     flex-direction: column;
-    margin-top: 25px;
+    justify-content: center;
+    align-items: center;
   }
 
- 
+  .flex-right{
+    display: none;
+  }
 
   /* Footer */
   .footer {
     width: 100%;
     height: max-content;
-    background: url(./img/bg.jpg) no-repeat center center/cover;
+    background: url(../img/bg.jpg) no-repeat center center/cover;
   }
 
   .footer-top {
-    display: flex;
-    justify-content: space-between;
     flex-direction: column;
-    align-items: center;
-    height: max-content;
-    background-color: rgba(82, 80, 80, 0.158);
   }
 
   .footer-middle {
-    display: flex;
-    justify-content: space-between;
     flex-direction: column;
-    align-items: center;
-    text-align: center;
-    color: white;
   }
 }
-
