mise a jour de la partie responsive

--- a/Accessoir/accessoir.css
+++ b/Accessoir/accessoir.css
@@ -23,6 +23,10 @@ body {
   color: white;
 }
 
+.head-price {
+  color: white;
+}
+
 .flex-right {
   position: absolute;
   right: 0;
@@ -213,10 +217,21 @@ body {
 }
 
 /* Responsive */
+@media screen and (max-width: 1400px) {
+  /* ----- btn price --------*/
+  .btn-price {
+    display: none;
+  }
+}
 
 @media screen and (max-width: 992px) {
   .container {
     width: 100%;
+  }
+
+  /* ----- btn price --------*/
+  .btn-price {
+    display: none;
   }
 
   .chose-the-flex {
@@ -255,6 +270,24 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+  }
+
+  /* ---- price ----*/
+  .head-price {
+    display: none;
+  }
+
+  /*----- btn price ------*/
+  .btn-price {
+    display: block;
+    border-top-right-radius: 16px;
+    border-bottom-right-radius: 16px;
+    box-shadow: 3px 2px 7px black;
+    margin-top: 15px;
+    background-color: #879e0f;
+    width: 92px;
+    padding: 13px;
+    color: white;
   }
 
   /* Footer */
